--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -1,6 +1,6 @@
 // LE BODY PERMET D'INITIALISER LES PROPRIÉTÉS GÉNÉRALES DE LA PAGE. LES ÉLÉMENTS DE LA PAGE VONT HÉRITÉS DES PROPRIÉTÉS INSCRITE DANS BODY
 
-body{
+body {
   font-family: $ff-normal;
   font-size: $fz-normal;
   color: $color-text-normal;
@@ -20,7 +20,7 @@ body{
 
 }
 
-.cursor{
+.cursor {
   width: 20px;
   height: 20px;
   background: $jaune-main;
@@ -34,26 +34,32 @@ body{
   pointer-events: none;
   z-index: 150;
 
-  transform: translate(-50%, -50%);position: fixed;
+  transform: translate(-50%, -50%);
+  position: fixed;
 }
-.expand{
+
+.expand {
   animation: cursorAnim3 .3s backwards;
   border: 4px solid $mauve-main;
 }
 
-*,*:hover{
+*, *:hover {
   cursor: none;
 }
-div{
+
+div {
   cursor: none;
 }
-span{
+
+span {
   cursor: none;
 }
-a{
+
+a {
   cursor: none;
 }
-.loader{
+
+.loader {
   position: fixed;
   top: 0;
   left: 1/2;
@@ -70,7 +76,7 @@ a{
   align-items: center;
 
 
-  img{
+  img {
     width: 64px;
     height: auto;
     position: absolute;
@@ -79,13 +85,13 @@ a{
   }
 }
 
-.fondu-out{
+.fondu-out {
   opacity: 0;
   transition: opacity 0.3s ease-out;
   display: none;
 }
 
-button{
+button {
   width: 200px;
   height: 54px;
 
@@ -95,14 +101,14 @@ button{
   color: $mauve-main;
   cursor: none;
 
-  &:hover{
+  &:hover {
     background-color: $mauve-main;
     color: $jaune-main;
     border: 1px solid $jaune-main;
     cursor: none;
   }
 
-  &:active{
+  &:active {
     background-color: $mauve-pale;
     color: $jaune-main;
     border: 1px solid $jaune-main;
@@ -111,10 +117,11 @@ button{
 
 }
 
-.texte-alt-color{
+.texte-alt-color {
   color: $jaune-main;
 }
-.texte-alt2-color{
+
+.texte-alt2-color {
   color: $mauve-pale;
 }
 
@@ -141,12 +148,12 @@ button{
 }
 
 
-@media screen and (max-width: $vw-tablette){
+@media screen and (max-width: $vw-tablette) {
   body {
-      width: 100%;
-      height: 100%;
+    width: 100%;
+    height: 100%;
   }
-  .cursor{
+  .cursor {
     display: none;
   }
 }
