--- a/src/scss/components/_section-competences.scss
+++ b/src/scss/components/_section-competences.scss
@@ -153,6 +153,104 @@
 }
 
 @media screen and (max-width: $vw-tablette) {
+  .competences {
+    width: 100vw;
+    height: 100%;
+  }
+  .competences h1 {
+    margin: 20px 0;
+    font-size: $fz-h2;
+  }
+  .comp-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 20px 1fr 20px 1fr 20px 1fr 20px;
+    width: 100%;
+  }
+  .comp-1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    height: 130px;
+    width: 90vw;
+    margin: 20px 0;
+
+    p {
+      font-size: 16px;
+      height: 100%;
+      width: 200px;
+      text-align: left;
+    }
+  }
+  .comp-2 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    height: 130px;
+    width: 90vw;
+    margin: 20px 0;
+
+    p {
+      font-size: 16px;
+      height: 100%;
+      width: 200px;
+      text-align: right;
+    }
+  }
+
+  .comp-3 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 5;
+    grid-row-end: 6;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    height: 130px;
+    width: 90vw;
+    margin: 30px 0;
+
+    p {
+      font-size: 16px;
+      height: 100%;
+      width: 200px;
+      text-align: left;
+    }
+  }
+  .comp-4 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 7;
+    grid-row-end: 8;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    height: 130px;
+    width: 90vw;
+    margin: 20px 0;
+
+    p {
+      font-size: 16px;
+      height: 100%;
+      width: 200px;
+      text-align: right;
+    }
+  }
 
 }
 
