--- a/src/scss/components/_section-contact.scss
+++ b/src/scss/components/_section-contact.scss
@@ -86,6 +86,18 @@
 
 @media screen and (max-width: $vw-tablette) {
 
+  .sociaux {
+    width: 100vw;
+    display: flex;
+    justify-content: start;
+  }
+  .sociaux a {
+    margin: 0 50px;
+  }
+  .formulaire-contact a img {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: $vw-mobile) {
