--- a/src/scss/settings/_dimensions.scss
+++ b/src/scss/settings/_dimensions.scss
@@ -14,6 +14,8 @@ $vw-huge: $max-width;
 
 $vw-mobile : 480px;
 $vw-tablette : 768px;
+$vw-tablette2 : 1440px;
+$vw-laptop : 1366px;
 
 // Dimension pour formulaire
 $base-input-height: 36px;
