--- a/src/scss/components/_section-a-propos.scss
+++ b/src/scss/components/_section-a-propos.scss
@@ -186,7 +186,36 @@
 .a-propos-footer {
   background: $jaune-main;
 }
+@media screen and (max-width: $vw-laptop) {
+  .texte-propos {
+    width: 500px;
+    height: 500px;
+    font-size: $fz-normal;
+  }
+  .a-propos {
+    height: 65vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 50px 600px auto 600px 50px;
+  }
 
+  .a-propos-sideA {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-end: 1;
+    justify-self: center;
+    align-self: center;
+  }
+
+  .a-propos-sideB {
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-end: 1;
+    justify-self: end;
+    position: relative;
+  }
+
+}
 @media screen and (max-width: $vw-tablette) {
   .a-propos {
     grid-template-columns: 1fr;
@@ -214,8 +243,7 @@
 
   }
   .texte-propos {
-    width: 100vw;
-    margin: 0 10px;
+    width: 600px;
     height: 600px;
     font-size: $fz-normal3;
 
@@ -319,6 +347,7 @@
 
   }
   .texte-propos {
+    width: 400px;
     height: 400px;
     font-size: $fz-normal;
 
@@ -395,6 +424,4 @@
   .a-propos-footer {
     margin: 0;
   }
-
-
 }
