--- a/src/scss/components/_section-single.scss
+++ b/src/scss/components/_section-single.scss
@@ -115,8 +115,8 @@
 
 .citrouille-demo-video video {
   justify-content: center;
-  height: 50%;
-  width: 50%;
+  height: 75%;
+  width: 75%;
 }
 
 .single-voir-site{
@@ -232,7 +232,81 @@
 
 
 }
+@media screen and (max-width: $vw-laptop) {
+  .intro-projet {
+    display: grid;
+    grid-template-columns: 20px 1fr 20px;
+    height: 100%;
 
+    .image-projet {
+      width: 70%;
+      justify-self: center;
+
+      margin: 20px 0;
+
+      grid-column-start: 2;
+      grid-column-end: 3;
+    }
+
+    .texte-projet {
+      grid-column-start: 2;
+      grid-column-end: 3;
+      width: 90vw;
+      height: 100%;
+      justify-self: center;
+    }
+
+    .logiciels-competences-projet {
+      display: grid;
+      grid-template-columns: 1fr 50px 1fr;
+      grid-template-rows: 1fr 10px 1fr;
+    }
+
+    .logiciels-competences-projet img {
+      width: 75px;
+      height: auto;
+      margin: 0 10px 0 0;
+    }
+
+    .un-logiciel {
+      grid-column-start: 1;
+      grid-column-end: 2;
+
+      grid-row-start: 1;
+      grid-row-end: 2;
+    }
+
+    .flex-logiciels {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+    }
+
+    .une-competence {
+      grid-column-start: 1;
+      grid-column-end: 2;
+
+      grid-row-start: 3;
+      grid-row-end: 4;
+    }
+
+    .flex-competences {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+    }
+    .titre-logo-projet {
+      text-align: center;
+    }
+  }
+  .projet-section {
+    h1 {
+      text-align: center;
+    }
+  }
+}
 @media screen and (max-width: $vw-tablette) {
   .intro-projet {
     display: grid;
