--- a/src/scss/components/_section-singles.scss
+++ b/src/scss/components/_section-singles.scss
@@ -248,6 +248,10 @@
     margin: 30px;
     border-radius: 255px;
 
+    h2{
+      font-size: $fz-normal;
+    }
+
     p {
       font-size: 12px;
     }
