--- a/src/scss/components/_section-contact.scss
+++ b/src/scss/components/_section-contact.scss
@@ -1,6 +1,12 @@
 /* section-contact */
 .contact {
   height: 75vh;
+  h2{
+    a{
+      text-decoration: none;
+      color: $jaune-main;
+    }
+  }
 }
 
 .grid-contact {
@@ -140,6 +146,7 @@ a .ico-sketchfab:hover{
     grid-row-start: 2;
     grid-row-end: 3;
     justify-self: center;
+    align-self: center;
   }
   .info-contact > * {
     justify-self: center;
