responsive 375 fix sidenav + taille font

--- a/src/scss/components/_header-page.scss
+++ b/src/scss/components/_header-page.scss
@@ -121,13 +121,13 @@
     margin-left: 20px;
   }
   .sidenav a {
-    font-size: $fz-h1;
+    font-size: 45px;
     line-height: 30%;
   }
   .sidenav .closeMenu {
     position: absolute;
-    top: 25px;
-    left: 70vw;
+    top: 3%;
+    left: 65%;
     font-size: 60px;
     margin-left: 50px;
   }
