--- a/src/scss/components/_section-interets.scss
+++ b/src/scss/components/_section-interets.scss
@@ -90,6 +90,26 @@
     }
   }
 }
+@media screen and (max-width: $vw-tablette2) {
+  .interet-grid {
+    display: grid;
+    grid-template-columns: 50px 1fr auto 1fr 50px;
+    grid-template-rows: 1fr;
+    gap: 0 0;
+  }
+
+  .texte-interet {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+
+    p {
+      height: 125px;
+      width: 40vw;
+      margin: 20% 0 0 0;
+    }
+  }
+}
 @media screen and (max-width: $vw-tablette) {
   .interets h1 {
     margin: 20px 0;
