fix hero banderolle

--- a/src/scss/components/_section-hero.scss
+++ b/src/scss/components/_section-hero.scss
@@ -18,9 +18,9 @@
 .banderolle {
   position: absolute;
   width: 100vw;
-  height: 28%;
+  height: 30%;
   left: 0;
-  top: 400px;
+  top: 35%;
 
   background: rgba(131, 92, 237, 0.45);
 
@@ -39,7 +39,7 @@
   width: 193px;
   height: 50px;
 
-  margin-top: 0;
+  margin: 25px 0;
 
   line-height: 25px;
 
